--- a/book-launch/package.json
+++ b/book-launch/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@paystack/inline-js": "^2.22.7",
+    "framer-motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
